Changing something, adding some rule.

--- a/sourcecode/python/cfi.html
+++ b/sourcecode/python/cfi.html
@@ -5,9 +5,9 @@
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-<title>公募“捕鼠”：专项检查成重头戏专户监管加码-[中财网]</title>
-<meta name="keywords" content="公募“捕鼠”：专项检查成重头戏专户监管加码">
-<meta name="description" content="公募“捕鼠”：专项检查成重头戏专户监管加码">
+<title>外媒：中国将成立航空发动机集团 总资产或达1450亿元-[中财网]</title>
+<meta name="keywords" content="外媒：中国将成立航空发动机集团 总资产或达1450亿元">
+<meta name="description" content="外媒：中国将成立航空发动机集团 总资产或达1450亿元">
 
 <link href="pic/newspagestyle.css" rel="stylesheet" type="text/css"/>
 　　<script type="text/javascript" >
@@ -40,28 +40,41 @@
 	<tr>
 		<td style="width:650px;border:solid 1px darkred;" valign="top">
  <div id="tdcontent" style="font-size: 14px; margin: 0px 20px 0px 20px; width: 600px; line-height: 24px; text-align: left">
-<h1>公募“捕鼠”：专项检查成重头戏专户监管加码</h1>
+<h1>外媒：中国将成立航空发动机集团 总资产或达1450亿元</h1>
 <table width=100% style="margin:0 0px 0 0px"><tr>
 <td width=30%><div style="font-size:0pt;background-color:rgb(100,100,100);width:100%;height:1px"></div></td> 
-<td width=40% style="font-size:9pt;text-align:center;white-space:nowrap;padding:3px 0px 5px 3px">时间：2015年12月31日 08:12:35&nbsp中财网</td> 
+<td width=40% style="font-size:9pt;text-align:center;white-space:nowrap;padding:3px 0px 5px 3px">时间：2016年01月19日 14:07:06&nbsp中财网</td> 
 <td width=30%><div style="font-size:0pt;background-color:rgb(100,100,100);width:100%;height:1px"></div></td></tr></table>
 <!--newstext-->
 
-　　随着资产管理行业规模的迅速扩张，公募基金受到的监管愈发严格。<br /><br />
-　　多位公募基金的稽核及风控人员向《每日经济新闻》记者表示，从整体趋势来看，2014年和2015年上半年的监管环境相对宽松，2015年下半年以来尺度明显收紧。具体来看，监管层对基金公司专户业务的监管较往年明显严格得多，专项检查成为监管的重头戏。<br /><br />
-　　<font color=blue >专户业务监管收紧</font><br />
-　　在谈到2015年监管层对基金行业的监管态度时，几乎所有接受采访的基金公司监管人员都表示，感触最深的就是基金公司中专项资产管理计划业务(简称专户业务)受到的监管力度较以往明显加强，特别是在监管层清理配资市场后更为明显。<br /><br />
-　　一家中型基金公司的风控人士告诉《每日经济新闻》记者，2015年感觉监管层对专户业务和基金公司子公司监管变化比较大，主要是严格了很多：“在清查融资的背景下，我觉得主要是两个方面的问题：一是账户资金的问题，二是配资方面的含义比较广，像原来伞形配资由劣后级直接操盘的，没有进行风控检查，就属于清查范围。”<br /><br />
-　　上海一家基金公司的稽核人员也表示，“像专户接受的一些委托人指令的权益类业务，有的基金公司会开展分级产品，其投资指令是由劣后端下来的，这类业务监管层肯定是不鼓励的。”<br /><br />
-　　该人员表示，“总体来说，公募基金监管还是体现出加强监管放松管制的原则。就管理而言，对于专户这一块监管比较严格，杠杆比例一直在降。另外，通道类业务也查得比较严。在专户的具体条款中，对委托人的权利和义务界定也比较严格，可以说是双方的责任和权利更加明确和书面化。”<br /><br />
-　　“年底，我们正忙着向证监局报资料，特别是前期证监会发布清理配资市场的文件后，具体单只专户产品资料也需要填写得十分清楚和详细，哪些合规，哪些不合规，这些都是要报备的。”深圳某基金公司的风控人员也表示。<br /><br />
-　　与此同时，专户业务的高比例杠杆、运作规范等问题也受到监管层重视。2015年3月，上银基金旗下的“创金成长1号”资管产品设立杠杆超过10倍，违反了基金业协会发布的资产管理业务“八条底线”，因此遭到暂停受理备案3个月的处罚。<br /><br />
-　　<font color=blue >监管力度升级</font><br />
-　　接受火山财富采访的多位基金公司监管人员普遍认为，2014年和2015年上半年的监管环境是相对比较宽松，2015年下半年以来监管节奏和力度明显强化，管理更为严格。10月末，中央巡视组入驻央行、证监会后，监管层对于公募和私募的严查进入小高峰 。其后，证监会又表示将开始专项检查，专项检查范围涉及<a onmouseover="popLayer_simple(getPosLeft(this),getPosTop(this),'399975');overdiv=1" onmouseout="overdiv=0;setTimeout('hideLayer()',100)" href="http://quote.cfi.cn/quote_399975.html" target=_blank>证券公司</a>、基金公司、期货公司、证券咨询机构等各类机构，证券基金期货子公司也是检查重点。<br /><br />
-　　具体来看，5月初，市场就传出北京证监局对银华基金进行了例行的专项检查。而11月，又有包括嘉实基金、长盛基金等多家基金公司被广东证监局进行专项检查。尽管异地监管并不是第一次，但还是引起了市场的猜测。一位公募基金监管人士也表示异地交换检查，前几年就有，只是近年来已成为监管常态，可能是出于“防止地方性保护”的考虑。<br /><br />
-　　“预计2016年的监管仍然不会放松，会越来越严格。”前述风控人员指出。（每日经济新闻)
+	                
+    　　 据外媒周二(1月19日)援引知情人士称，中国最快将于本月宣布成立国家航空发动机集团公司，将分散在相关公司的航空发动机业务整合注入该集团。<br /><br />
+<br />
+<br />
+　　知情人士透露，本次相关资产涉及40多家单位，几乎包括中国所有航空发动机相关研制单位，总资产达1100亿元人民币。<br /><br />
+<br />
+<br />
+　　他表示，中国政府和包括中国航空工业集团在内的多家国有企业还将再向新成立的公司合计投资约350亿元。<br /><br />
+<br />
+<br />
+　　目前中国国资委、工信部和中航工业集团均未回应上述消息。此前外媒曾在2015年10月报道称，中国正计划成立一家国家航空发动机集团公司。<br /><br />
+<br />
+<br />
+　　中国航空工业集团旗下上市公司<a onmouseover="popLayer_simple(getPosLeft(this),getPosTop(this),'600893');overdiv=1" onmouseout="overdiv=0;setTimeout('hideLayer()',100)" href="http://quote.cfi.cn/quote_600893.html" target=_blank>中航动力</a>、<a onmouseover="popLayer_simple(getPosLeft(this),getPosTop(this),'000738');overdiv=1" onmouseout="overdiv=0;setTimeout('hideLayer()',100)" href="http://quote.cfi.cn/quote_000738.html" target=_blank>中航动控</a>和<a onmouseover="popLayer_simple(getPosLeft(this),getPosTop(this),'600391');overdiv=1" onmouseout="overdiv=0;setTimeout('hideLayer()',100)" href="http://quote.cfi.cn/quote_600391.html" target=_blank>成发科技</a>2015年10月公告称，按照国家有关部门的安排，目前正在制定中航工业下属航空发动机相关企(事)业单位业务的重组整合方案，涉及公司实际控制人发生变更，中航工业预计不再成为公司的实际控制人。<br /><br />
+<br />
+<br />
+　　校对:Mac<br />
+
+
+
+
+
+
+
+
+
 <!--/newstext-->
-<div style=FONT-SIZE:14px;text-align:right><div style=width:100%;text-align:left;font-size:14px>来源：《每日经济新闻》<br>国内统一刊号 CN51-0127　全国邮发代号 61-149<br></div></div>
+<div style=FONT-SIZE:14px;text-align:right>　 .F.X.1.6.8</div>
 <!----></div>
 <div></div> 
 
@@ -98,7 +111,7 @@ onmouseout="overdiv=0; setTimeout('hideLayer()',100)">pop up description layer</
 
 </div>
 <div id="adright_content1" style="display:none">
-<a href="http://m.cfi.cn" target=_blank><img src="pic/yl-phone1.jpg" style="border:0px"></a>
+
 
 
 
